force-app/main/default/objects/Survey_Question__c/fields/Enable_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Escalation</label>
    <type>Checkbox</type>
</CustomField>