force-app/main/default/objects/Survey_Question__c/fields/Related_Question__c.field-meta.xml
<CustomField>
    <fullName>Related_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>Survey_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>