force-app/main/default/objects/Survey_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Question__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>